[gd_scene load_steps=2 format=2]

[ext_resource path="res://Managers/SoundtrackManager/SoundtrackManager.gd" type="Script" id=1]

[node name="SoundtrackManager" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="fadeIn" type="Tween" parent="."]

[node name="fadeOut" type="Tween" parent="."]

[node name="DeckA" type="AudioStreamPlayer" parent="."]

[node name="DeckB" type="AudioStreamPlayer" parent="."]

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "clickme"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="tween_completed" from="fadeOut" to="." method="_on_fadeOut_tween_completed"]
[connection signal="pressed" from="Control/Button" to="." method="_on_Button_pressed"]
